--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -16,20 +16,21 @@
 
     <!-- Botón de Correo Electrónico -->
 
+
     <ImageView
         android:id="@+id/background_image"
         android:layout_width="412dp"
         android:layout_height="735dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/backgroundimagen"
         android:scaleType="centerCrop"
         android:src="@drawable/fondotierramatrix"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="VisualLintBounds" />
 
     <ImageButton
         android:id="@+id/whatsapp_button"
@@ -50,13 +51,13 @@
         android:id="@+id/linkedin_button"
         android:layout_width="180dp"
         android:layout_height="85dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/linkedin_button"
         android:scaleType="fitCenter"
         android:src="@drawable/linkedinres"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/whatsapp_button" />
 
@@ -70,22 +71,22 @@
         android:src="@drawable/githubres"
         app:layout_constraintBottom_toTopOf="@+id/whatsapp_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/background_image"
-        app:layout_constraintVertical_bias="0.507" />
+        app:layout_constraintVertical_bias="0.682" />
 
     <ImageButton
         android:id="@+id/email_button"
         android:layout_width="180dp"
         android:layout_height="85dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/email_button"
         android:scaleType="fitCenter"
         android:src="@drawable/outlookcorreores"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linkedin_button" />
 
@@ -93,10 +94,27 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
         android:text="@string/volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_button"
+        app:layout_constraintVertical_bias="0.258" />
+
+    <ImageButton
+        android:id="@+id/close_button"
+        style="@style/botonApagar2"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/botondeapagar"
+        android:scaleType="fitCenter"
+        android:src="@drawable/boton_apagar2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
